--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.yazyaz"
-        minSdk 16
+        minSdk 19
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -30,23 +30,28 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
+    implementation 'com.google.firebase:firebase-analytics'
 
     // FirebaseUI
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
-    implementation 'com.google.firebase:firebase-database:21.0.3'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.3.0'
 
     // ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
 
     // ButterKnife
     implementation 'com.jakewharton:butterknife:10.2.3'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 
     // Dexter
-    implementation 'com.karumi:dexter:6.1.2'
+    implementation 'com.karumi:dexter:6.2.3'
 
     // TextDrawable
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
