--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    repositories {
+        google()  // Google's Maven repository
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
     }
@@ -10,4 +13,13 @@ plugins {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
 }
